# music-processing

./: .gitignore  pyproject.toml
notebooks/: sample_notebook.ipynb
notebooks/fundamentals_music_processing/00_basics/: 01_integrate_multimedia.ipynb
scripts/: local-deployment.sh  run-integration-test.sh  run-unit-test.sh
