[tool.poetry]
name = "music-processing"
version = "0.1.0"
description = "This project contains learning Jupyter notebooks for music processing with the goal of implementing and enhancing music information retrieval (MIR)."
authors = ["Sumedhan Ramesh <sumedhanramesh2012@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]


[tool.poetry.dependencies]
asyncpg = "^0.29.0"
fastapi = "^0.115.6"
httpx = {version = "0.28.1", extras = ["socks"]}
ipykernel = "^6.30.1"
matplotlib = "^3.10.6"
numpy = "^2.3.3"
opentelemetry-instrumentation = "^0.57b0"
pandas = "^2.2.3"
pydantic-settings = "^2.1.0"
python = ">=3.11,<3.12"
pyyaml = "^6.0.1"
scipy = "^1.16.2"
sse-starlette = "^1.6.5"
starlette = ">=0.36.2"
structlog = "^25.4.0"
uvicorn = "^0.23.2"
pedalboard = "^0.9.17"

[tool.poetry.group.dev.dependencies]
alembic = "^1.16.4"
pre-commit = "^4.3.0"
mypy = "^1.17.1"
ruff = "^0.12.10"
pytest = "^8.4.1"
pytest-asyncio = "^1.1.0"
pytest-cov = "^6.2.1"
pytest-env = "^1.1.5"
pytest-mock = "^3.14.1"
types-pyyaml = "^6.0.12.20250822"
types-requests = "^2.32.4.20250809"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
